// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Challenge Tile styles getImageStyle should always return typeof ImageStyle 1`] = `
Object {
  "position": "absolute",
  "right": 0,
  "top": 0,
}
`;

exports[`Challenge Tile styles getImageStyle should always return typeof ImageStyle 2`] = `
Object {
  "bottom": 0,
  "height": 99,
  "position": "absolute",
  "right": 0,
  "width": 143,
}
`;

exports[`Challenge Tile styles getImageStyle should always return typeof ImageStyle 3`] = `
Object {
  "bottom": 0,
  "left": 0,
  "position": "absolute",
}
`;

exports[`Challenge Tile styles getImageStyle should always return typeof ImageStyle 4`] = `
Object {
  "bottom": 0,
  "position": "absolute",
  "right": 10,
}
`;

exports[`Challenge Tile styles getImageStyle should always return typeof ImageStyle 5`] = `
Object {
  "bottom": 0,
  "height": 119,
  "left": 0,
  "position": "absolute",
  "width": 101,
}
`;
